force-app/main/default/objects/Plan_Design_Request__c/Plan_Design_Request__c.object-meta.xml
<CustomObject>
    <label>Plan Design Request</label>
    <nameField>
        <displayFormat>Plan Design Request {000}</displayFormat>
        <label>Plan Design Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Design Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>