force-app/main/default/objects/Plan_Design_Request__c/fields/Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accepted Date</label>
    <type>Date</type>
</CustomField>