force-app/main/default/objects/Plan_Design_Request__c/fields/Box_Link_for_Data_files__c.field-meta.xml
<CustomField>
    <fullName>Box_Link_for_Data_files__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Box Link for Data files</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>