force-app/main/default/objects/Plan_Design_Request__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Display this field only when Status = Cancelled
Sales – Editable, Benefit Strategist – Read Only</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>