force-app/main/default/objects/Plan_Design_Request__c/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <description>Display this field only when Status = Cancelled
Auto Populated once Status is updated to Cancelled - Read-only</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>