force-app/main/default/objects/Plan_Design_Request__c/fields/Comments_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Comments_Next_Steps__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments/Next Steps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>