force-app/main/default/objects/Plan_Design_Request__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>HYPERLINK(
  &quot;/&quot; &amp;  Membership_Activity_Name__r.AccountId ,
  Membership_Activity_Name__r.Account.Name,
  &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>