force-app/main/default/objects/Plan_Design_Request__c/fields/Membership_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activity_Name__c</fullName>
    <label>Membership Activity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Plan Design Requests</relationshipLabel>
    <relationshipName>Plan_Design_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>