force-app/main/default/objects/Plan_Design_Request__c/fields/Pricing_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pricing Analyst</description>
    <label>Pricing Analyst</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>Benefit_Strategist</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Plan_Design_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>