force-app/main/default/objects/Plan_Design_Request__c/fields/Requested_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Due Date</label>
    <type>Date</type>
</CustomField>