force-app/main/default/objects/Plan_Design_Request__c/fields/Surest_SVP_Involved__c.field-meta.xml
<CustomField>
    <fullName>Surest_SVP_Involved__c</fullName>
    <formula>TEXT(Membership_Activity_Name__r.Surest_SVP_Involved__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surest SVP Involved</label>
    <type>Text</type>
</CustomField>