force-app/main/default/objects/Plan_Design_Request__c/validationRules/No_Edits_after_Cancelled_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Edits_after_Cancelled_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Cancelled&quot;),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>This Plan Design Request has already been cancelled and can no longer be edited.</errorMessage>
</ValidationRule>