force-app/main/default/objects/Plan_Design_Request__c/validationRules/Status_Update_to_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Update_to_Cancelled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISCHANGED(Status__c),
    ISPICKVAL(Status__c, &quot;Cancelled&quot;),
    $Profile.Name = &quot;Benefit Strategist&quot;
)</errorConditionFormula>
    <errorMessage>Benefit Strategists do not have permission to cancel Plan Design Requests.
This must be cancelled by Sales Team</errorMessage>
</ValidationRule>