force-app/main/default/objects/Plan_Design_Request__c/listViews/All_Completed_Plan_Design_Requests.listView-meta.xml
<ListView>
    <fullName>All_Completed_Plan_Design_Requests</fullName>
    <columns>NAME</columns>
    <columns>Membership_Activity_Name__c</columns>
    <columns>Company__c</columns>
    <columns>User__c</columns>
    <columns>Status__c</columns>
    <columns>Surest_SVP_Involved__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Completed Plan Design Requests</label>
</ListView>