force-app/main/default/objects/Plan_Design_Request__c/listViews/All_Plan_Design_Requests.listView-meta.xml
<ListView>
    <fullName>All_Plan_Design_Requests</fullName>
    <columns>NAME</columns>
    <columns>Membership_Activity_Name__c</columns>
    <columns>Company__c</columns>
    <columns>User__c</columns>
    <columns>Status__c</columns>
    <columns>Surest_SVP_Involved__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>